<resources>

    <string name="app_name">中国文化地图</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="pic_text">图片</string>
    <string name="name_text">名称</string>
    <string name="tel_text">电话</string>
    <string name="desc_text">描述</string>
    <string name="add_text">地址</string>
    <string name="lat_text">经度</string>
    <string name="lng_text">纬度</string>
    <string name="provice_text">省份</string>
    <string name="city_text">城市</string>

    <string name="location_info_text">位置信息</string>
    <string name="re_location_text">重新定位</string>

    <string name="pic_select_camara_text">拍照</string>
    <string name="pic_select_albam_text">从相册选择</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>

    <string name="set_location_text">位置</string>

    <string name="next_text">下一步</string>
    <string name="complete_text">完成</string>
    <string name="refresh_text">刷新</string>
    <string name="settings_text">设置</string>

    <string name="basic_info_text">基本信息</string>
    <string name="set_pic_text">设置图片</string>
    <string name="organization_input_text">输入机构编码</string>

    <string name="tab_menu_add_text">添加兴趣点</string>
    <string name="tab_menu_map_text">文化地图</string>
    <string name="tab_menu_our_text">我</string>

    <string name="registered_text">注册</string>
    <string name="enter_text">进入</string>

    <string name="organization_hint_text">机构编码</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="error_field_required">该字段不能为空</string>

    <string name="more_text">More</string>

    <string name="footprints_text">足迹</string>
    <string name="culture_art_text">文化/艺术</string>
    <string name="book_coffee_text">书店/Coffee</string>
    <string name="play_text">玩儿</string>
    <string name="eat_text">吃</string>
    <string name="recommend_text">推荐自由行/跟团游</string>
    <string name="user_center_text">个人中心</string>
    <string name="setting_text">设置</string>
    <string name="tools_text">工具</string>
    <string name="invite_friends_text">邀请朋友</string>

</resources>
