<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <Button
            android:id="@+id/picSelectAlbam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/pic_select_albam_text"
            android:textColor="@color/pic_select_color" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/pic_select_line_color" />

        <Button
            android:id="@+id/picSelectCamara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/pic_select_camara_text"
            android:textColor="@color/pic_select_color" />
    </LinearLayout>

    <Button
        android:id="@+id/picSelectCancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:text="@string/cancel"
        android:textColor="@color/pic_select_color" />

</LinearLayout>